Java 8 compatibility added